# rosey

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN-telegram-funnel.md  Dockerfile  HANDOFF.md  README.md  agent.py  alexa_handler.py  app.py  channels.py  cli.py  fly.toml  gate.py  household.py  household.toml.example  interaction-model.json  memory_tool.py  paths.py  pyproject.toml  redact.py  reminder_format.py  reminders.py  roster.py  scheduler.py  server.py  skill.json  summary.py  telegram_bot.py  test_gate_unified.py  test_recurring_reminders.py  test_redact.py  test_reminder_fixes.py  tools.py  transcribe.py  whatsapp_handler.py
.github/workflows/: lint.yml
baileys/: index.js  package.json
router/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  db.py  fly.toml  household_template.fly.toml  members.py  notifications.py  provisioning.py  pyproject.toml  schema.sql  telegram_onboarding.py  timezone.py
router/scripts/: migrate_all.py  wipe_tenants.py
router/tests/: test_app.py  test_db.py  test_household_render.py  test_members.py  test_provisioning.py  test_telegram_onboarding.py  test_timezone.py
scripts/: deploy.sh  split-to-hosted-branch.sh  start.sh  test_escalation_ladder.py
website/: index.html  style.css
website/about/: index.html
website/docs/: index.html
website/privacy/: index.html
