[project]
name = "rosey"
version = "0.1.0"
description = "Self-hosted household assistant with chat channels and markdown memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.80",
    "flask>=3.0",
    "python-dotenv>=1.0",
    "python-telegram-bot[webhooks]>=21.0",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",          # APScheduler's SQLAlchemyJobStore for persistence
    "tomli>=2.0; python_version < '3.11'",
    "gunicorn>=21.0",
    "requests>=2.31",
    # HTTP layer: Quart (async Flask-shaped API) routes /telegram + /alexa
    # to the same process. Hypercorn serves Quart in production. Replaces
    # the previous PTB-managed tornado webhook server so we can host
    # multiple channels under one HTTP surface.
    "quart>=0.20",
    "hypercorn>=0.16",
]

[project.optional-dependencies]
# Kept for backward-compatible install docs: `pip install -e '.[telegram]'`.
# Telegram support is installed by default via the main dependency list.
telegram = []

[project.urls]
Homepage = "https://github.com/aloktiagi/rosey"
Repository = "https://github.com/aloktiagi/rosey"
Issues = "https://github.com/aloktiagi/rosey/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["memory_tool", "agent", "alexa_handler", "cli", "app", "summary", "household", "reminders", "telegram_bot", "transcribe", "channels", "paths", "reminder_format", "roster", "tools", "scheduler", "gate", "server", "whatsapp_handler"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["baileys/node_modules", "memories", ".venv"]

[tool.ruff.lint]
# Conservative starting set. Bump up as the codebase grows.
#   E   — pycodestyle errors
#   F   — pyflakes (unused imports, undefined names, etc.)
#   I   — isort (import order)
#   UP  — pyupgrade (modernize syntax to target-version)
#   B   — flake8-bugbear (likely-bug patterns)
select = ["E", "F", "I", "UP", "B"]
# E501 (line-too-long) is handled by the formatter; ruff format will break
# lines where it can and leave the rest (long URLs, error strings) alone.
# E741 is too pedantic for single-letter loop vars in comprehensions.
# UP006/UP035/UP045 modernize type annotations to PEP 604 / PEP 585 syntax,
# but with `from __future__ import annotations` the old forms work fine and
# the rewrite is pure churn. Re-enable when the floor moves to Python 3.10.
ignore = ["E501", "E741", "UP006", "UP035", "UP045"]

[tool.ruff.lint.per-file-ignores]
# Test scripts often have long inline fixtures and one-off patterns.
"test_*.py" = ["B"]
"scripts/test_*.py" = ["B"]
