[project]
name = "rosey-router"
version = "0.1.0"
description = "Tenant router for Rosey: Telegram in, per-household Fly VM out"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "gunicorn>=21.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
